# omnidim-mcp-cloud

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mcp-config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 20260523_000000_initial_oauth_tables.py  20260523_010000_authorization_request.py  20260523_020000_auth_code_api_key_id.py  20260524_010000_persist_odoo_api_key.py
app/: annotations.py  config.py  db.py  dependencies.py  errors.py  logging.py  main.py  middleware.py  procedures.py  scopes.py  security.py
app/_generated/: .spec.yml  tools.py
app/models/: __init__.py  oauth.py
app/routes/: authorize.py  health.py  internal.py  mcp.py  register.py  telemetry.py  token.py  wellknown.py
app/schemas/: oauth.py
app/services/: authorize.py  bearer.py  clients.py  dispatcher.py  issue_code.py  token.py
scripts/: regen.py
tests/: conftest.py  test_authorize.py  test_health.py  test_mcp_annotations.py  test_mcp_procedures.py  test_mcp_transport.py  test_middleware.py  test_register.py  test_telemetry.py  test_token_flow.py  test_wellknown.py
